fix(ui5-button): prevent button with icons truncate in ie

--- a/packages/main/src/themes/Button.css
+++ b/packages/main/src/themes/Button.css
@@ -97,7 +97,6 @@
 }
 
 :host([has-icon]:not([icon-end])) .ui5-button-text {
-	max-width: calc(100% - 1rem);
 	margin-left: var(--_ui5_button_base_icon_margin);
 }
 
